Closed Bug 1030917 Opened 10 years ago Closed 10 years ago

xpc::GlobalProperties object ignores the 'aPromise' param.

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: baku, Assigned: baku)

Details

Attachments

(1 file, 1 obsolete file)

      No description provided.
Attached patch sandbox.patch (obsolete) — Splinter Review
Attachment #8446707 - Flags: review?(bzbarsky)
Comment on attachment 8446707 [details] [diff] [review]
sandbox.patch

Why is the right fix not to get rid of the argument?
Attachment #8446707 - Flags: review?(bzbarsky) → review?(bobbyholley)
> Why is the right fix not to get rid of the argument?

Because somehow we call it with 'false' here:
https://mxr.mozilla.org/mozilla-central/source/js/xpconnect/src/XPCComponents.cpp#2784
And maybe that is wrong, but I don't know this code enough.
Right, and your patch would change the behavior of that callsite.  It's not obvious to me which behavior is correct, hence the review redirection to bholley.  ;)
Comment on attachment 8446707 [details] [diff] [review]
sandbox.patch

Review of attachment 8446707 [details] [diff] [review]:
-----------------------------------------------------------------

Yes, it looks like this bool param in the constructor was an unreviewed post-r+ change from bug 988122. Let's remove it.
Attachment #8446707 - Flags: review?(bobbyholley) → review-
Attached patch sandbox.patchSplinter Review
Attachment #8446707 - Attachment is obsolete: true
Attachment #8448566 - Flags: review?(bobbyholley)
Comment on attachment 8448566 [details] [diff] [review]
sandbox.patch

Review of attachment 8448566 [details] [diff] [review]:
-----------------------------------------------------------------

r=me with that.

::: js/xpconnect/src/xpcprivate.h
@@ +3306,2 @@
>        mozilla::PodZero(this);
>        Promise = true;

Add a comment here indicating that this is because Promise is supposed to be part of ES, and therefore should appear on every global.
Attachment #8448566 - Flags: review?(bobbyholley) → review+
https://tbpl.mozilla.org/?tree=Try&rev=7f46de59c54b

pushed to try before landing it.
https://hg.mozilla.org/mozilla-central/rev/381894d247b3
Assignee: nobody → amarchesini
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: