Bug 1030917 - xpc::GlobalProperties object ignores the 'aPromise' param., r=bholley